--- a/analysis/FaultLocalization.csproj
+++ b/analysis/FaultLocalization.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExecutedTest.cs" />
+    <Compile Include="RunTests.cs" />
     <Compile Include="StackTraceElement.cs" />
     <Compile Include="TestSuite.cs" />
   </ItemGroup>
