Refactored the Suspiciousness Rater.  Added code to calculate the DBBs identified by the tests.
Signed-off-by: ryano144 <ryano144@gmail.com>

--- a/analysis/FaultLocalization.csproj
+++ b/analysis/FaultLocalization.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AbstractTestRunner.cs" />
     <Compile Include="Chains.cs" />
+    <Compile Include="DynamicBasicBlock.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ITestRunner.cs" />
     <Compile Include="Program.cs" />
