--- a/PrintTokens/Replace/Replace.csproj
+++ b/PrintTokens/Replace/Replace.csproj
@@ -2,20 +2,18 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CADB8CC-8379-47DA-BB1F-92633519C4FE}</ProjectGuid>
+    <ProjectGuid>{342C3D43-64CD-41AD-A70A-B9FCA673EF30}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TotInfo</RootNamespace>
-    <AssemblyName>TotInfo</AssemblyName>
+    <RootNamespace>Replace</RootNamespace>
+    <AssemblyName>Replace</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,17 +22,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,10 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseVersion.cs" />
-    <Compile Include="Version23.cs" />
-    <Compile Include="Version22.cs" />
-    <Compile Include="Version10.cs" />
-    <Compile Include="Version11.cs" />
+    <Compile Include="Version32.cs" />
+    <Compile Include="Verion11.cs" />
     <Compile Include="Version12.cs" />
     <Compile Include="Version13.cs" />
     <Compile Include="Version14.cs" />
@@ -59,16 +51,27 @@
     <Compile Include="Version17.cs" />
     <Compile Include="Version18.cs" />
     <Compile Include="Version19.cs" />
-    <Compile Include="Version2.cs" />
     <Compile Include="Version20.cs" />
-    <Compile Include="Version4.cs" />
     <Compile Include="Version5.cs" />
+    <Compile Include="Version21.cs" />
+    <Compile Include="Version22.cs" />
+    <Compile Include="Version23.cs" />
+    <Compile Include="Version24.cs" />
+    <Compile Include="Version25.cs" />
+    <Compile Include="Version26.cs" />
+    <Compile Include="Version27.cs" />
+    <Compile Include="Version28.cs" />
+    <Compile Include="Version29.cs" />
+    <Compile Include="Version30.cs" />
     <Compile Include="Version3.cs" />
+    <Compile Include="Version31.cs" />
+    <Compile Include="Version4.cs" />
     <Compile Include="Version6.cs" />
     <Compile Include="Version7.cs" />
     <Compile Include="Version8.cs" />
     <Compile Include="Version9.cs" />
-    <Compile Include="Version21.cs" />
+    <Compile Include="Version10.cs" />
+    <Compile Include="Version2.cs" />
     <Compile Include="Version1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
