--- a/PrintTokens/PrintTokens2/PrintTokens2.csproj
+++ b/PrintTokens/PrintTokens2/PrintTokens2.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EA34B02B-C984-4917-8987-3A129FE19E21}</ProjectGuid>
+    <ProjectGuid>{113206ED-C844-4BD8-BF3E-67994D7AD448}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PrintTokens</RootNamespace>
-    <AssemblyName>PrintTokens</AssemblyName>
+    <RootNamespace>PrintTokens2</RootNamespace>
+    <AssemblyName>PrintTokens2</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -44,14 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="original.cs" />
-    <Compile Include="Version1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Version2.cs" />
-    <Compile Include="Version3.cs" />
-    <Compile Include="Version4.cs" />
-    <Compile Include="Version5.cs" />
-    <Compile Include="Version6.cs" />
-    <Compile Include="Version7.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
