--- a/ValueInjector/ValueInjector.csproj
+++ b/ValueInjector/ValueInjector.csproj
@@ -42,7 +42,8 @@
   <ItemGroup>
     <Compile Include="Statement.cs" />
     <Compile Include="Value.cs" />
-    <Compile Include="ValueInjector.cs" />
+    <Compile Include="ValueInjectedAttribute.cs" />
+    <Compile Include="Instrumenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueMapping.cs" />
     <Compile Include="ValueProfile.cs" />
