--- a/PrintTokens/PrintTokens2/PrintTokens2.csproj
+++ b/PrintTokens/PrintTokens2/PrintTokens2.csproj
@@ -43,18 +43,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="original.cs" />
+    <Compile Include="original.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Version1.cs" />
-    <Compile Include="Version10.cs" />
-    <Compile Include="Version2.cs" />
-    <Compile Include="Version3.cs" />
-    <Compile Include="Version4.cs" />
-    <Compile Include="Version5.cs" />
-    <Compile Include="Version6.cs" />
-    <Compile Include="Version7.cs" />
-    <Compile Include="Version8.cs" />
-    <Compile Include="Version9.cs" />
+    <Compile Include="Version1.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version10.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version2.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version3.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version4.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version5.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version6.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version7.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version8.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Version9.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
