--- a/strings/Strings.Tests/Strings.Tests.csproj
+++ b/strings/Strings.Tests/Strings.Tests.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Strings.Designer.cs">
       <DependentUpon>Strings.moles</DependentUpon>
     </Compile>
+    <Compile Include="TestObjectTest.Do.g.cs">
+      <DependentUpon>StringExtensionsTest.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Moles Include="Strings.moles" />
