--- a/SiemensSuite/schedule/schedule_original/schedulePUT.Tests/schedulePUT.Tests.csproj
+++ b/SiemensSuite/schedule/schedule_original/schedulePUT.Tests/schedulePUT.Tests.csproj
@@ -73,15 +73,60 @@
       <DependentUpon>EleTest.cs</DependentUpon>
     </Compile>
     <Compile Include="EleTest.cs" />
+    <Compile Include="ProgramTest.addProcess.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.append_ele.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.block_process.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProgramTest.cs" />
+    <Compile Include="ProgramTest.del_ele.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.find_nth.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.finish_all_processes.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.finish_process.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.initialize.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.init_prio_queue.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProgramTest.Main.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.new_list.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.new_process.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.quantum_expire.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.readFile.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.schedule.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.unblock_process.g.cs">
+      <DependentUpon>ProgramTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramTest.upgrade_process_prio.g.cs">
       <DependentUpon>ProgramTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
-    <Compile Include="schedule.Designer.cs">
-      <DependentUpon>schedule.moles</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Moles Include="schedule.moles" />
