--- a/SiemensSuite/tcas/tcas_original/tcas.Tests/tcas.Tests.csproj
+++ b/SiemensSuite/tcas/tcas_original/tcas.Tests/tcas.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{AF33640E-0350-4760-8380-4D5667169C39}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>tcasPUT.Tests</RootNamespace>
-    <AssemblyName>tcasPUT.Tests</AssemblyName>
+    <RootNamespace>tcas.Tests</RootNamespace>
+    <AssemblyName>tcas.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
