All tests in TotInfo and Replace now pass on the base version
Signed-off-by: ryano144 <ryano144@gmail.com>

--- a/PrintTokens/TotInfo.Tests/TotInfo.Tests.csproj
+++ b/PrintTokens/TotInfo.Tests/TotInfo.Tests.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Edu\Nlu\Sir\Siemens\TotInfo\BaseVersionTest.gcf.g.cs">
       <DependentUpon>BaseVersionTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edu\Nlu\Sir\Siemens\TotInfo\BaseVersionTest.gser.g.cs">
+      <DependentUpon>BaseVersionTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edu\Nlu\Sir\Siemens\TotInfo\BaseVersionTest.InfoTbl.g.cs">
       <DependentUpon>BaseVersionTest.cs</DependentUpon>
     </Compile>
