--- a/SiemensSuite/PrintTokens2/PrintTokens2/PrintTokens2.csproj
+++ b/SiemensSuite/PrintTokens2/PrintTokens2/PrintTokens2.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="original.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Version10.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
