results for schedule and schedule 2

--- a/SiemensSuite/schedule2/schedule2/schedule2.Tests/schedule2.Tests.csproj
+++ b/SiemensSuite/schedule2/schedule2/schedule2.Tests/schedule2.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{5E4BB592-4BAF-40CA-A323-F34B423141B8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>schedule2PUT.Tests</RootNamespace>
-    <AssemblyName>schedule2PUT.Tests</AssemblyName>
+    <RootNamespace>schedule2.Tests</RootNamespace>
+    <AssemblyName>schedule2.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
