--- a/SiemensSuite/schedule/schedule/schedule.Tests/schedule.Tests.csproj
+++ b/SiemensSuite/schedule/schedule/schedule.Tests/schedule.Tests.csproj
@@ -127,6 +127,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
+    <Compile Include="schedule.Designer.cs">
+      <DependentUpon>schedule.moles</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Moles Include="schedule.moles" />
