--- a/SiemensSuite/Replace/Replace/Replace.csproj
+++ b/SiemensSuite/Replace/Replace/Replace.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{342C3D43-64CD-41AD-A70A-B9FCA673EF30}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Replace</RootNamespace>
     <AssemblyName>Replace</AssemblyName>
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BaseVersion.cs" />
     <Compile Include="IReplace.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Version32.cs" />
     <Compile Include="Verion11.cs" />
     <Compile Include="Version12.cs" />
