new totinfo exes... blame ryan

--- a/SiemensSuite/TotInfo/TotInfo/TotInfo.csproj
+++ b/SiemensSuite/TotInfo/TotInfo/TotInfo.csproj
@@ -46,10 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseVersion.cs" />
     <Compile Include="ITotInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Version1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.csproj">
